# nba

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml
nba/: __init__.py  decorators.py
nba/com/: __init__.py  com.py  com_methods.py  com_routines.py
nba/cosmology/: __init__.py  cosmotools.py
nba/ios/: __init__.py  gadget_reader.py  io_gadget.py  io_gizmo_pynbody.py  io_snaps.py  pynbody_routines.py  read_snap.py  snap_reader.py
nba/kinematics/: delta_sph.py  delta_sph_paralell.py  halo_kienamatics.py  kinematics.py  quick_kinematics_plot.py  utils.py
nba/orbits/: __init__.py  extract_nbody_orbit.py  halo_orbit.py  nbody_orbit_extractor.py  orbit_properties.py
nba/structure/: __init__.py  density_tools.py  structure.py
nba/utils/: __init__.py  coordinates.py  grid.py
nba/visuals/: __init__.py  plotting.py  vis.py  visulization.py  viz.py
tutorials/: Reading_GC21_MWLMC_snapshots.ipynb  Reading_GC21_MWLMC_snapshots_v_0.2.ipynb  compute_orbit.py  compute_orbit_parallel.py  density_profiles.ipynb  disk_particles.ipynb  example_cosmology_functions.ipynb  halo_kinematics.py  orbital_poles_computation.py
